adapted test for play 2.6, cleanup of dependencies